# advent-of-code-2021

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.fleet/: run.json
aoc21/: p01a.py  p01b.py  p02.py  p03.py  p04.py  p05.py  p06.py  p07.py  p08.py  p09.py  p10.py  p11.py  p12.py  p13.py  p14.py  p15.py  p16.py  p17.py  p18.py  p19.py  p20.py  p21.py  utils.py
data/: p21.txt
tests/: test_p01a.py  test_p01b.py  test_p02.py  test_p03.py  test_p04.py  test_p05.py  test_p06.py  test_p07.py  test_p08.py  test_p09.py  test_p10.py  test_p11.py  test_p12.py  test_p13.py  test_p14.py  test_p15.py  test_p16.py  test_p17.py  test_p18.py  test_p19.py  test_p20.py  test_p21.py
