[tool.poetry]
name = "aoc21"
version = "0.1.0"
description = "Having winter fun with Advent of Code 2021 ❄️"
authors = ["Andrey Vlasovskikh <andrey.vlasovskikh@jetbrains.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
