[tool.poetry]
name = "aoc21"
version = "0.1.0"
description = "Having winter fun with Advent of Code 2021 ❄️"
authors = ["Andrey Vlasovskikh <andrey.vlasovskikh@jetbrains.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
funcparserlib = "1.0.0a"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
